--- a/src/main/resources/templates/admin/addType.html
+++ b/src/main/resources/templates/admin/addType.html
@@ -2,31 +2,39 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>商品类型添加页面</title>
+<title>添加类型 - 电商管理系统</title>
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+<link rel="stylesheet" th:href="@{/css/ruoyi-admin.css}" />
+<script th:src="@{/js/jquery.min.js}"></script>
+<script th:src="@{/js/common.js}"></script>
+</head>
 <body>
-	<div th:include="admin/header"></div>
-	<br><br><br>
-	<div class="container">
-		<div class="bg-primary"  style="width:70%; height: 60px;padding-top: 0.5px;">
-	       <h3 align="center">添加类型</h3>
-	   </div><br>
-		<form th:action="@{/type/addType}" name="myform" method="post" th:object="${goodsType}"  class="form-horizontal" role="form" >
-			<div class="form-group has-success">
-				<label class="col-sm-2 col-md-2 control-label">类型名称</label>
-				<div class="col-sm-4 col-md-4">
-					<input type="text" class="form-control"
-					 placeholder="请输入类型名"
-					th:field="*{typename}"/>
+	<div th:replace="admin/header::myheader"></div>
+	
+	<div class="main-content">
+		<div class="page-container">
+			<div class="page-header">
+				<h1 class="page-title">🏷️ 添加类型</h1>
+			</div>
+			
+			<div class="card">
+				<div class="card-body">
+					<form th:action="@{/type/addType}" method="post" th:object="${goodsType}" style="max-width: 600px; margin: 0 auto;">
+						<div class="form-group">
+							<label class="form-label"><span style="color: #f56c6c;">* </span>类型名称</label>
+							<input type="text" class="form-control" th:field="*{typename}"
+								   placeholder="请输入类型名称" required="required"/>
+							<small class="form-text text-muted">例如：服装、数码、图书等</small>
+						</div>
+						
+						<div class="form-group" style="margin-top: 30px; text-align: center;">
+							<button type="submit" class="btn-custom btn-primary" style="width: 120px; margin-right: 10px;">✓ 添加</button>
+							<button type="reset" class="btn-custom btn-info" style="width: 120px;">↻ 重置</button>
+						</div>
+					</form>
 				</div>
 			</div>
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<button type="submit"class="btn btn-success" >添加</button>
-					<button type="reset" class="btn btn-primary" >重置</button>
-				</div>
-			</div>
-		</form>
+		</div>
 	</div>
 </body>
 </html>
