--- a/src/main/resources/templates/admin/selectGoods.html
+++ b/src/main/resources/templates/admin/selectGoods.html
@@ -3,131 +3,104 @@
 <head>
 <base th:href="@{/}">
 <meta charset="UTF-8">
-<title>主页</title>
+<title>商品管理 - 电商管理系统</title>
 <link rel="stylesheet" href="css/bootstrap.min.css" />
+<link rel="stylesheet" href="css/ruoyi-admin.css" />
 <script src="js/jquery.min.js"></script>
+<script src="js/common.js"></script>
 <script type="text/javascript" th:inline="javascript">
+	var deleteUrl = /*[[@{/goods/delete}]]*/ '/goods/delete';
 	function deleteGoods(tid){
-		$.ajax(
-			{
-				//请求路径，要注意的是url和th:inline="javascript"
-				url : [[@{/goods/delete}]],
-				//请求类型
-				type : "post",
-				//data表示发送的数据
-				data : {
-					id : tid
-				},
-				//成功响应的结果
-				success : function(obj){//obj响应数据
-					if(obj == "no"){
-						alert("该商品有关联不允许删除！");
-					}else{
-						if(window.confirm("真的删除该商品吗？")){
-							//获取路径
-							var pathName=window.document.location.pathname;
-							//截取，得到项目名称
-							var projectName=pathName.substring(0,pathName.substr(1).indexOf('/')+1);
-							window.location.href = projectName + obj;
-						}
-					}
-				},
-		        error : function() {
-		            alert("处理异常！");
-		        }
-			}	
-		);
+		confirmDelete(tid, deleteUrl, '确定要删除该商品吗？此操作不可恢复！');
 	}
-	</script>
+</script>
 </head>
 <body>
 	<!-- 加载header.html -->
-	<div th:include="admin/header"></div>
-	<br><br><br>
-	<div class="container">
-		<div class="panel panel-primary">
-			<div class="panel-heading">
-				<h3 class="panel-title">商品列表</h3>
+	<div th:replace="admin/header::myheader"></div>
+	
+	<div class="main-content">
+		<div class="page-container">
+			<div class="page-header">
+				<h1 class="page-title">商品管理</h1>
 			</div>
-			<div class="panel-body">
-				<div class="table table-responsive">
-					<table class="table table-bordered table-hover">
-						<tbody class="text-center">
-							<tr>
-								<th>商品ID</th>
-								<th>商品名称</th>
-								<th>商品类型</th>
-								<th>商品状态</th>
-								<th>详情</th>
-								<th th:if="${act} == 'updateSelect'">操作</th>
-								<th th:if="${act} == 'deleteSelect'">操作</th>
-							</tr>
-							<tr th:each="gds:${allGoods}">
-								<td th:text="${gds.id}"></td>
-								<td th:text="${gds.gname}"></td>
-								<td th:text="${gds.typename}"></td>
-								<td th:text="${gds.status == 1 ? '上架' : '下架'}"></td>
-								<td>
-									<a th:href="@{goods/detail(id=${gds.id},act=detail)}" target="_blank">详情</a>
-								</td>
-								<td th:if="${act} == 'updateSelect'">
-									<a th:href="@{goods/detail(id=${gds.id},act=update)}" target="_blank">修改</a>
-								</td>
-								<td th:if="${act} == 'deleteSelect'">
-									<a th:href="'javascript:deleteGoods(' + ${gds.id} +')'" >删除</a>
-								</td>
-							</tr>
-							<tr th:if="${act} == 'select'">
-								<td colspan="5" align="right">
-									<ul class="pagination">
-										<li><a>第<span th:text="${currentPage}" ></span>页</a></li>
-										<li><a>共<span th:text="${totalPage}" ></span>页</a></li>
-										<li>
-											<span th:if="${currentPage} != 1" >
-												<a th:href="@{goods/selectAllGoodsByPage(act=select,currentPage=${currentPage - 1})}">上一页</a>
-											</span>
-											<span th:if="${currentPage} != ${totalPage}" >
-												<a th:href="@{goods/selectAllGoodsByPage(act=select,currentPage=${currentPage + 1})}">下一页</a>
-											</span>
-										</li>
-									</ul>
-								</td>
-							</tr>
-							<tr th:if="${act} == 'updateSelect'">
-								<td colspan="6" align="right">
-									<ul class="pagination">
-										<li><a>第<span th:text="${currentPage}" ></span>页</a></li>
-										<li><a>共<span th:text="${totalPage}" ></span>页</a></li>
-										<li>
-											<span th:if="${currentPage} != 1" >
-												<a th:href="@{goods/selectAllGoodsByPage(act=updateSelect,currentPage=${currentPage - 1})}">上一页</a>
-											</span>
-											<span th:if="${currentPage} != ${totalPage}" >
-												<a th:href="@{goods/selectAllGoodsByPage(act=updateSelect,currentPage=${currentPage + 1})}">下一页</a>
-											</span>
-										</li>
-									</ul>
-								</td>
-							</tr>
-							<tr th:if="${act} == 'deleteSelect'">
-								<td colspan="6" align="right">
-									<ul class="pagination">
-										<li><a>第<span th:text="${currentPage}" ></span>页</a></li>
-										<li><a>共<span th:text="${totalPage}" ></span>页</a></li>
-										<li>
-											<span th:if="${currentPage} != 1" >
-												<a th:href="@{goods/selectAllGoodsByPage(act=deleteSelect,currentPage=${currentPage - 1})}">上一页</a>
-											</span>
-											<span th:if="${currentPage} != ${totalPage}" >
-												<a th:href="@{goods/selectAllGoodsByPage(act=deleteSelect,currentPage=${currentPage + 1})}">下一页</a>
-											</span>
-										</li>
-									</ul>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+			
+			<div class="action-buttons">
+				<div class="btn-group-left">
+					<a th:href="@{/goods/toAddGoods}" class="btn-custom btn-primary">
+						➕ 添加商品
+					</a>
+					<button onclick="location.reload()" class="btn-custom btn-info">
+						🔄 刷新
+					</button>
 				</div>
+				<div>
+					<span style="color: #909399;">共 <strong th:text="${#lists.size(allGoods)}">0</strong> 条数据</span>
+				</div>
+			</div>
+			
+			<div class="table-wrapper">
+				<table class="custom-table">
+					<thead>
+						<tr>
+							<th class="text-center">商品ID</th>
+							<th>商品名称</th>
+							<th class="text-center">商品类型</th>
+							<th class="text-center">商品状态</th>
+							<th class="text-center">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${#lists.isEmpty(allGoods)}">
+							<td colspan="5" class="text-center">
+								<div class="empty-state">
+									<div class="empty-state-icon">📦</div>
+									<div class="empty-state-text">暂无商品数据</div>
+								</div>
+							</td>
+						</tr>
+						<tr th:each="gds:${allGoods}">
+							<td class="text-center" th:text="${gds.id}"></td>
+							<td th:text="${gds.gname}"></td>
+							<td class="text-center" th:text="${gds.typename}"></td>
+							<td class="text-center">
+								<span th:class="${gds.status == 1 ? 'status-badge status-badge-success' : 'status-badge status-badge-danger'}" 
+									  th:text="${gds.status == 1 ? '上架' : '下架'}"></span>
+							</td>
+							<td class="text-center table-actions">
+								<div class="action-btn-group">
+									<a th:href="@{goods/detail(id=${gds.id},act=detail)}" class="action-btn action-btn-detail" target="_blank">📄 详情</a>
+									<a th:if="${act} == 'updateSelect'" th:href="@{goods/detail(id=${gds.id},act=update)}" class="action-btn action-btn-edit" target="_blank">✏️ 修改</a>
+									<button th:if="${act} == 'deleteSelect'" th:onclick="'deleteGoods(' + ${gds.id} + ')'" class="action-btn action-btn-delete">🗑️ 删除</button>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			
+			<div class="pagination-container" th:if="${totalPage != null && totalPage > 0}">
+				<ul class="pagination">
+					<li th:class="${currentPage == 1 ? 'disabled' : ''}">
+						<a th:href="${currentPage > 1 ? '@{/goods/selectAllGoodsByPage(currentPage=' + (currentPage - 1) + ',act=' + act + ')}' : 'javascript:void(0)'}" 
+						   aria-label="Previous">
+							<span aria-hidden="true">&laquo; 上一页</span>
+						</a>
+					</li>
+					<li th:each="i : ${#numbers.sequence(1, totalPage)}" 
+					    th:class="${i == currentPage ? 'active' : ''}">
+						<a th:href="@{/goods/selectAllGoodsByPage(currentPage=${i},act=${act})}" th:text="${i}">1</a>
+					</li>
+					<li th:class="${currentPage == totalPage ? 'disabled' : ''}">
+						<a th:href="${currentPage < totalPage ? '@{/goods/selectAllGoodsByPage(currentPage=' + (currentPage + 1) + ',act=' + act + ')}' : 'javascript:void(0)'}" 
+						   aria-label="Next">
+							<span aria-hidden="true">下一页 &raquo;</span>
+						</a>
+					</li>
+					<li class="disabled">
+						<a>第 <span th:text="${currentPage}"></span> / <span th:text="${totalPage}"></span> 页</a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
